--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "data/Enron"]
 	path = data/Enron
-	url = git@github.com:Charlie9/enron_intent_dataset_verified.git
+	url = https://github.com/Charlie9/enron_intent_dataset_verified.git
