--- a/environment.yml
+++ b/environment.yml
@@ -70,6 +70,7 @@ dependencies:
   - ipykernel=6.29.5=pyh57ce528_0
   - ipython=9.2.0=pyhfb0248b_0
   - ipython_pygments_lexers=1.1.1=pyhd8ed1ab_0
+  - ipywidgets=8.1.7=pyhd8ed1ab_0
   - jedi=0.19.2=pyhd8ed1ab_1
   - jinja2=3.1.6=pyhd8ed1ab_0
   - joblib=1.5.0=pyhd8ed1ab_0
@@ -77,6 +78,7 @@ dependencies:
   - jsonschema-specifications=2025.4.1=pyh29332c3_0
   - jupyter_client=8.6.3=pyhd8ed1ab_1
   - jupyter_core=5.7.2=pyh31011fe_1
+  - jupyterlab_widgets=3.0.15=pyhd8ed1ab_0
   - kiwisolver=1.4.7=py311h2c37856_0
   - krb5=1.21.3=h237132a_0
   - langcodes=3.3.0=pyhd8ed1ab_0
@@ -230,6 +232,7 @@ dependencies:
   - wcwidth=0.2.13=pyhd8ed1ab_1
   - weasel=0.4.1=pyhd8ed1ab_2
   - wheel=0.45.1=pyhd8ed1ab_1
+  - widgetsnbextension=4.0.14=pyhd8ed1ab_0
   - wrapt=1.17.2=py311h917b07b_0
   - xorg-libxau=1.0.12=h5505292_0
   - xorg-libxdmcp=1.1.5=hd74edd7_0
@@ -244,4 +247,6 @@ dependencies:
   - zlib=1.2.13=hfb2fe0b_6
   - zstandard=0.23.0=py311h917b07b_2
   - zstd=1.5.6=hb46c0d2_0
+  - pip:
+      - en-core-web-sm==3.8.0
 prefix: /Users/keesbenkendorfer/miniconda3/envs/ErUM
