--- a/environment.yml
+++ b/environment.yml
@@ -8,8 +8,13 @@ dependencies:
   - aiohttp=3.11.18=py311h4921393_0
   - aiosignal=1.3.2=pyhd8ed1ab_0
   - annotated-types=0.7.0=pyhd8ed1ab_1
+  - anyio=4.9.0=pyh29332c3_0
   - appnope=0.1.4=pyhd8ed1ab_1
+  - argon2-cffi=23.1.0=pyhd8ed1ab_1
+  - argon2-cffi-bindings=21.2.0=py311h460d6c5_5
+  - arrow=1.3.0=pyhd8ed1ab_1
   - asttokens=3.0.0=pyhd8ed1ab_1
+  - async-lru=2.0.5=pyh29332c3_0
   - attrs=25.3.0=pyh71513ae_0
   - aws-c-auth=0.7.22=hec39e38_2
   - aws-c-cal=0.6.14=h5db4892_1
@@ -24,12 +29,18 @@ dependencies:
   - aws-checksums=0.1.18=h5db4892_6
   - aws-crt-cpp=0.26.9=h03bff2b_0
   - aws-sdk-cpp=1.11.329=hb37a6d0_3
+  - babel=2.17.0=pyhd8ed1ab_0
+  - beautifulsoup4=4.13.4=pyha770c72_0
+  - bleach=6.2.0=pyh29332c3_4
+  - bleach-with-css=6.2.0=h82add2a_4
   - brotli=1.1.0=hd74edd7_2
   - brotli-bin=1.1.0=hd74edd7_2
   - brotli-python=1.1.0=py311h3f08180_2
   - bzip2=1.0.8=h99b78c6_7
   - c-ares=1.34.5=h5505292_0
   - ca-certificates=2025.4.26=hbd8a1cb_0
+  - cached-property=1.5.2=hd8ed1ab_1
+  - cached_property=1.5.2=pyha770c72_1
   - catalogue=2.0.10=py311h267d04e_1
   - certifi=2025.4.26=pyhd8ed1ab_0
   - cffi=1.17.1=py311h3a79f62_0
@@ -48,11 +59,13 @@ dependencies:
   - datasets=3.5.0=pyhd8ed1ab_0
   - debugpy=1.8.14=py311h155a34a_0
   - decorator=5.2.1=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
   - dill=0.3.8=pyhd8ed1ab_0
   - exceptiongroup=1.2.2=pyhd8ed1ab_1
   - executing=2.2.0=pyhd8ed1ab_0
   - filelock=3.18.0=pyhd8ed1ab_0
   - fonttools=4.57.0=py311h4921393_0
+  - fqdn=1.5.1=pyhd8ed1ab_1
   - freetype=2.12.1=hadb7bae_2
   - frozenlist=1.5.0=py311h4921393_1
   - fsspec=2024.12.0=pyhd8ed1ab_0
@@ -60,8 +73,11 @@ dependencies:
   - glog=0.7.1=heb240a5_0
   - gmp=6.3.0=h7bae524_2
   - gmpy2=2.2.1=py311hb5d9ff4_0
+  - h11=0.16.0=pyhd8ed1ab_0
   - h2=4.2.0=pyhd8ed1ab_0
   - hpack=4.1.0=pyhd8ed1ab_0
+  - httpcore=1.0.9=pyh29332c3_0
+  - httpx=0.28.1=pyhd8ed1ab_0
   - huggingface_hub=0.30.2=pyhd8ed1ab_0
   - hyperframe=6.1.0=pyhd8ed1ab_0
   - idna=3.10=pyhd8ed1ab_1
@@ -71,13 +87,26 @@ dependencies:
   - ipython=9.2.0=pyhfb0248b_0
   - ipython_pygments_lexers=1.1.1=pyhd8ed1ab_0
   - ipywidgets=8.1.7=pyhd8ed1ab_0
+  - isoduration=20.11.0=pyhd8ed1ab_1
   - jedi=0.19.2=pyhd8ed1ab_1
   - jinja2=3.1.6=pyhd8ed1ab_0
   - joblib=1.5.0=pyhd8ed1ab_0
+  - json5=0.12.0=pyhd8ed1ab_0
+  - jsonpointer=3.0.0=py311h267d04e_1
   - jsonschema=4.23.0=pyhd8ed1ab_1
   - jsonschema-specifications=2025.4.1=pyh29332c3_0
+  - jsonschema-with-format-nongpl=4.23.0=hd8ed1ab_1
+  - jupyter=1.1.1=pyhd8ed1ab_1
+  - jupyter-lsp=2.2.5=pyhd8ed1ab_1
   - jupyter_client=8.6.3=pyhd8ed1ab_1
+  - jupyter_console=6.6.3=pyhd8ed1ab_1
   - jupyter_core=5.7.2=pyh31011fe_1
+  - jupyter_events=0.12.0=pyh29332c3_0
+  - jupyter_server=2.15.0=pyhd8ed1ab_0
+  - jupyter_server_terminals=0.5.3=pyhd8ed1ab_1
+  - jupyterlab=4.4.2=pyhd8ed1ab_0
+  - jupyterlab_pygments=0.3.0=pyhd8ed1ab_2
+  - jupyterlab_server=2.27.3=pyhd8ed1ab_1
   - jupyterlab_widgets=3.0.15=pyhd8ed1ab_0
   - kiwisolver=1.4.7=py311h2c37856_0
   - krb5=1.21.3=h237132a_0
@@ -135,6 +164,7 @@ dependencies:
   - matplotlib-base=3.10.1=py311h031da69_0
   - matplotlib-inline=0.1.7=pyhd8ed1ab_1
   - mdurl=0.1.2=pyhd8ed1ab_1
+  - mistune=3.1.3=pyh29332c3_0
   - mpc=1.3.1=h8f1351a_1
   - mpfr=4.2.1=hb693164_3
   - mpmath=1.3.0=pyhd8ed1ab_1
@@ -142,17 +172,23 @@ dependencies:
   - multiprocess=0.70.16=py311h460d6c5_1
   - munkres=1.1.4=pyh9f0ad1d_0
   - murmurhash=1.0.10=py311h6885ffc_2
+  - nbclient=0.10.2=pyhd8ed1ab_0
+  - nbconvert-core=7.16.6=pyh29332c3_0
   - nbformat=5.10.4=pyhd8ed1ab_1
   - nbstripout=0.8.1=pyhd8ed1ab_0
   - ncurses=6.5=h5e97a16_3
   - nest-asyncio=1.6.0=pyhd8ed1ab_1
   - networkx=3.4.2=pyh267e887_2
+  - notebook=7.4.2=pyhd8ed1ab_0
+  - notebook-shim=0.2.4=pyhd8ed1ab_1
   - numpy=1.26.4=py311h7125741_0
   - openjpeg=2.5.2=h9f1df11_0
   - openssl=3.5.0=h81ee809_1
   - orc=2.0.1=h47ade37_1
+  - overrides=7.7.0=pyhd8ed1ab_1
   - packaging=25.0=pyh29332c3_1
   - pandas=2.2.3=py311hca32420_3
+  - pandocfilters=1.5.0=pyhd8ed1ab_0
   - parso=0.8.4=pyhd8ed1ab_1
   - pexpect=4.9.0=pyhd8ed1ab_1
   - pickleshare=0.7.5=pyhd8ed1ab_1004
@@ -161,7 +197,9 @@ dependencies:
   - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_2
   - platformdirs=4.3.7=pyh29332c3_0
   - preshed=3.0.9=py311h6885ffc_2
+  - prometheus_client=0.21.1=pyhd8ed1ab_0
   - prompt-toolkit=3.0.51=pyha770c72_0
+  - prompt_toolkit=3.0.51=hd8ed1ab_0
   - propcache=0.3.1=py311h4921393_0
   - psutil=7.0.0=py311h917b07b_0
   - pthread-stubs=0.4=hd74edd7_1002
@@ -173,11 +211,14 @@ dependencies:
   - pydantic=2.11.3=pyh3cfb1c2_0
   - pydantic-core=2.33.1=py311hc9d6b66_0
   - pygments=2.19.1=pyhd8ed1ab_0
+  - pyobjc-core=11.0=py311hab620ed_0
+  - pyobjc-framework-cocoa=11.0=py311hab620ed_0
   - pyparsing=3.2.3=pyhd8ed1ab_1
   - pysocks=1.7.1=pyha55dd90_7
   - python=3.11.9=h932a869_0_cpython
   - python-dateutil=2.9.0.post0=pyhff2d567_1
   - python-fastjsonschema=2.21.1=pyhd8ed1ab_0
+  - python-json-logger=2.0.7=pyhd8ed1ab_0
   - python-tzdata=2025.2=pyhd8ed1ab_0
   - python-xxhash=3.5.0=py311h917b07b_2
   - python_abi=3.11=7_cp311
@@ -191,27 +232,35 @@ dependencies:
   - referencing=0.36.2=pyh29332c3_0
   - regex=2024.11.6=py311h917b07b_0
   - requests=2.32.3=pyhd8ed1ab_1
+  - rfc3339-validator=0.1.4=pyhd8ed1ab_1
+  - rfc3986-validator=0.1.1=pyh9f0ad1d_0
   - rich=14.0.0=pyh29332c3_0
   - rpds-py=0.24.0=py311hc9d6b66_0
   - safetensors=0.5.3=py311h3ff9189_0
   - scikit-learn=1.6.1=py311h47fa2fb_0
   - scipy=1.15.2=py311h0675101_0
+  - send2trash=1.8.3=pyh31c8845_1
   - setuptools=80.1.0=pyhff2d567_0
   - shellingham=1.5.4=pyhd8ed1ab_1
   - six=1.17.0=pyhd8ed1ab_0
   - smart-open=7.1.0=hd8ed1ab_0
   - smart_open=7.1.0=pyhd8ed1ab_0
   - snappy=1.2.1=h98b9ce2_1
+  - sniffio=1.3.1=pyhd8ed1ab_1
+  - soupsieve=2.7=pyhd8ed1ab_0
   - spacy=3.8.5=py311h8fc16d6_0
   - spacy-legacy=3.0.12=pyhd8ed1ab_0
   - spacy-loggers=1.0.5=pyhd8ed1ab_0
   - srsly=2.5.1=py311h155a34a_1
   - stack_data=0.6.3=pyhd8ed1ab_1
   - sympy=1.14.0=pyh2585a3b_105
+  - terminado=0.18.1=pyh31c8845_0
   - thinc=8.3.2=py311h8fc16d6_1
   - threadpoolctl=3.6.0=pyhecae5ae_0
+  - tinycss2=1.4.0=pyhd8ed1ab_0
   - tk=8.6.13=h5083fa2_1
   - tokenizers=0.21.1=py311h82b0fb8_0
+  - tomli=2.2.1=pyhd8ed1ab_1
   - torchdata=0.7.1=py311
   - torchtext=0.17.0=py311
   - tornado=6.4.2=py311h917b07b_0
@@ -221,16 +270,22 @@ dependencies:
   - typer=0.15.3=pyhf21524f_0
   - typer-slim=0.15.3=pyh29332c3_0
   - typer-slim-standard=0.15.3=h1a15894_0
+  - types-python-dateutil=2.9.0.20241206=pyhd8ed1ab_0
   - typing-extensions=4.13.2=h0e9735f_0
   - typing-inspection=0.4.0=pyhd8ed1ab_0
   - typing_extensions=4.13.2=pyh29332c3_0
+  - typing_utils=0.1.0=pyhd8ed1ab_1
   - tzdata=2025b=h78e105d_0
   - ujson=5.10.0=py311h3f08180_1
   - unicodedata2=16.0.0=py311h917b07b_0
+  - uri-template=1.3.0=pyhd8ed1ab_1
   - urllib3=2.4.0=pyhd8ed1ab_0
   - wasabi=1.1.3=pyhd8ed1ab_1
   - wcwidth=0.2.13=pyhd8ed1ab_1
   - weasel=0.4.1=pyhd8ed1ab_2
+  - webcolors=24.11.1=pyhd8ed1ab_0
+  - webencodings=0.5.1=pyhd8ed1ab_3
+  - websocket-client=1.8.0=pyhd8ed1ab_1
   - wheel=0.45.1=pyhd8ed1ab_1
   - widgetsnbextension=4.0.14=pyhd8ed1ab_0
   - wrapt=1.17.2=py311h917b07b_0
